--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Todo List</title>
-        <script src="list.js" charset="utf-8"></script> 
+        <script src="list.js" charset="utf-8"></script>
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>Todo List</h1>
         <ul>
-            <li>N - For add a todo</li>
-            <li>L - View all todos </li>
-            <li>E - For exit  </li>
+            <li>new - For add a todo</li>
+            <li>List - View all todos </li>
+            <li>Delete - Delete a spesific Todo </li>
+            <li>Quit - For exit  </li>
         </ul>
     </body>
 </html>
