--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li>new - For add a todo</li>
             <li>List - View all todos </li>
-            <li>Delete - Delete a spesific Todo </li>
+            <li>Delete - Delete a specific Todo </li>
             <li>Quit - For exit  </li>
         </ul>
     </body>
